--- a/src/components/ProductForm/ProductForm.module.scss
+++ b/src/components/ProductForm/ProductForm.module.scss
@@ -3,13 +3,12 @@
 .productFormBox {
   @include tablet {
     display: flex;
-    width: 604px;
 
-    margin-bottom: 30px;
+    width: 604px;
   }
 
   @include desktop {
-    width: 730px;
+    width: 100%;
     margin-right: 25px;
     margin-bottom: 60px;
   }
@@ -18,10 +17,12 @@
 .productForm {
   @include tablet {
     display: flex;
+    flex-wrap: wrap;
   }
 
   @include desktop {
-    width: 600px;
+    flex-wrap: nowrap;
+    width: 100%;
   }
 }
 
@@ -34,6 +35,12 @@
   border: 2px solid $white;
   border-bottom: 1px solid $white;
   border-radius: 22px 22px 0px 0px;
+
+  @include fontProperty(
+    $weight: 700,
+    $color: $darkGray,
+    $letter-spacing: 0.02em
+  );
 
   &::placeholder {
     @include fontProperty(
@@ -72,6 +79,12 @@
   border-radius: 0px 0px 22px 0px;
   border-top: 1px solid $white;
   border-bottom: 2px solid $white;
+
+  @include fontProperty(
+    $weight: 700,
+    $color: $darkGray,
+    $letter-spacing: 0.02em
+  );
 
   @include tablet {
     width: 171px;
@@ -196,6 +209,7 @@
 
   @include desktop {
     width: 126px;
+    margin-right: 30px;
   }
 }
 
@@ -220,6 +234,7 @@
 
   &::placeholder {
     opacity: 1;
+    color: $lightGray6;
   }
 
   @include tablet {
@@ -230,8 +245,6 @@
     border-right: 1px solid transparent;
     border-left: 1px solid $lightGray1;
     border-radius: 0;
-
-    @include fontProperty($weight: 400, $color: $lightGray6);
   }
 }
 
@@ -252,6 +265,21 @@
 
     border: 2px solid $lightGray1;
     border-left: 1px solid $white;
+  }
+}
+
+.buttonInputBox {
+  @include tablet {
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
+    margin-left: 20px;
+    order: 4;
+  }
+  @include desktop {
+    margin-top: 0px;
+    margin-left: 0px;
+    order: 4;
   }
 }
 
