--- a/src/components/TransactionListItem/TransactionListItem.module.scss
+++ b/src/components/TransactionListItem/TransactionListItem.module.scss
@@ -13,7 +13,7 @@
 
   @include tablet {
     width: 599px;
-    height: 40px;
+    min-height: 40px;
     padding-bottom: 0;
   }
 
@@ -30,11 +30,11 @@
 
   @include tablet {
     justify-content: normal;
-    padding: 13px 20px 13px 30px;
+    padding: 10px 20px 10px 30px;
   }
 
   @include desktop {
-    padding: 3px 30px 13px 40px;
+    padding: 10px 30px 10px 40px;
   }
 }
 
@@ -68,6 +68,7 @@
 
 .expListItemDate,
 .incListItemDate {
+  width: 70px;
   margin-top: 32px;
   margin-right: 20px;
 
@@ -80,8 +81,9 @@
 
   @include tablet {
     order: 1;
+    width: 90px;
     margin-top: 0;
-    margin-right: 83px;
+    margin-right: 75px;
 
     @include fontProperty($size: 12px, $height: 1.17, $text-align: left);
   }
@@ -93,8 +95,9 @@
 
 .expListItemCategory,
 .incListItemCategory {
+  min-width: 30px;
   margin-top: 32px;
-  margin-right: 75px;
+  margin-right: 30px;
 
   @include fontProperty($size: 8px, $height: 1.125, $transform: uppercase);
 
@@ -113,16 +116,16 @@
 }
 
 .expListItemPrice {
-  width: 60px;
+  width: 150px;
 
   margin-top: auto;
   margin-right: 20px;
   margin-bottom: auto;
 
-  @include fontProperty($weight: 700, $color: $red1);
+  @include fontProperty($weight: 700, $color: $red1, $text-align: right);
 
   @include tablet {
-    width: 80px;
+    width: 100px;
     order: 4;
     margin-top: 0;
     margin-right: 20px;
@@ -136,7 +139,7 @@
 
 .incListItemPrice {
   composes: expListItemPrice;
-  @include fontProperty($weight: 700, $color: $green);
+  @include fontProperty($weight: 700, $color: $green, $text-align: right);
 }
 
 .expListItemBtnBox,
