add chart of transactions

--- a/src/components/ReportIncomes/ReportIncomes.module.scss
+++ b/src/components/ReportIncomes/ReportIncomes.module.scss
@@ -47,6 +47,7 @@
   padding-right: 15px;
   padding-bottom: 20px;
   border-bottom: 1px solid $lightGray8;
+  cursor: pointer;
 
   @include tablet {
     height: 113px;
