--- a/src/components/AuthForm/AuthForm.module.scss
+++ b/src/components/AuthForm/AuthForm.module.scss
@@ -13,7 +13,7 @@
   width: 300px;
   height: 525px;
   margin: auto;
-  padding-top: 50px;
+  padding-top: 20px;
   padding-bottom: 50px;
   border-radius: 30px;
   background-color: $white;
@@ -37,40 +37,76 @@
   }
 }
 
-.buttonGoogle {
-  display: flex;
-  align-items: center;
-  width: 125px;
-  height: 44px;
-  padding: 10px 20px;
-  margin-top: 24px;
-  margin-bottom: 30px;
+.logoBox {
+  position: absolute;
+  right: 5px;
+  bottom: 40px;
+  width: 170px;
+  height: 170px;
 
-  color: $darkGray;
-  background-color: $lightGray1;
+  @include tablet {
+    bottom: 18px;
+    width: 200px;
+    height: 200px;
+  }
 
-  border: 2px solid $lightGray5;
-  border-radius: 16px;
-  box-shadow: $btnShadowNormal;
-  outline: none;
-  cursor: pointer;
-}
-
-.googleLogo {
-  width: 17px;
-  height: 18px;
-  margin-right: 10px;
-
-  background-image: url(../../images/img/auth-page/google-logo.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    background-image: url(../../images/img/auth-page/google-logo-2x.png);
+  @include desktop {
+    bottom: 22px;
   }
 }
+
+.logoIcon {
+  width: 170px;
+  height: 170px;
+  fill: #dfe2eb;
+  transform: rotate(87deg);
+
+  @include tablet {
+    width: 200px;
+    height: 200px;
+  }
+}
+
+// .logoBox:hover {
+//   background-color: #ffe3d2;
+//   border-radius: 50%;
+//   box-shadow: 0 0 20px -5px $orange;
+// }
+
+// .buttonGoogle {
+//   display: flex;
+//   align-items: center;
+//   width: 125px;
+//   height: 44px;
+//   padding: 10px 20px;
+//   margin-top: 24px;
+//   margin-bottom: 30px;
+
+//   color: $darkGray;
+//   background-color: $lightGray1;
+
+//   border: 2px solid $lightGray5;
+//   border-radius: 16px;
+//   box-shadow: $btnShadowNormal;
+//   outline: none;
+//   cursor: pointer;
+// }
+
+// .googleLogo {
+//   width: 17px;
+//   height: 18px;
+//   margin-right: 10px;
+
+//   background-image: url(../../images/img/auth-page/google-logo.png);
+//   background-repeat: no-repeat;
+//   background-size: cover;
+
+//   @media screen and (min-device-pixel-ratio: 2),
+//     screen and (min-resolution: 192dpi),
+//     screen and (min-resolution: 2dppx) {
+//     background-image: url(../../images/img/auth-page/google-logo-2x.png);
+//   }
+// }
 
 .btnText {
   @include fontProperty(
@@ -82,7 +118,15 @@
   );
 }
 
-.googleText {
+// .googleText {
+//   @include fontProperty($size: 10px, $height: 1.12);
+
+//   @include tablet() {
+//     @include fontProperty($size: 12px, $height: 1.17);
+//   }
+// }
+
+.authText {
   @include fontProperty($size: 10px, $height: 1.12);
 
   @include tablet() {
