--- a/src/common/elements/Loader/Loader.module.scss
+++ b/src/common/elements/Loader/Loader.module.scss
@@ -1,1 +1,8 @@
 @import 'styles/shared.scss';
+
+.LoaderBox {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
